--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
     display: flex;
     background: crimson;
     height: 150px;
+    width: 100%;
     justify-content: center;
     align-items: center;
 
