--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -10,6 +10,7 @@
     background: white;
     text-decoration: none;
 
+
 }
 
 text{
@@ -39,7 +40,34 @@ text{
 }
 
 image{
+    top: 0;
     height: 100%;
     width: 100%;
+
+}
+
+.badge1 {
+    position:relative;
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+}
+.badge1[data-badge]:after {
+    content:attr(data-badge);
+    position:absolute;
+    top-left:0px;
+    right: 0;
+    font-size:12px;
+    background:green;
+    color:white;
+    width:68px;height:38px;
+    text-align:center;
+    line-height:18px;
+    border-radius:50%;
+    box-shadow:0 0 1px #333;
+    justify-content: center;
+    align-items: center;
+
 
 }
