--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -1,5 +1,5 @@
 .card_of_movie{
-    padding-top:0px;
+    padding-top:0;
     height: 450px;
     width: 250px;
     display: flex;
@@ -48,9 +48,9 @@ image{
 
 .badge1 {
     position:relative;
-    display: flex;
-    text-align: center;
-    align-items: center;
+    /*display: flex;*/
+    /*text-align: center;*/
+    /*align-items: center;*/
 
 }
 .badge1[data-badge]:after {
@@ -58,10 +58,10 @@ image{
     position:absolute;
     top-left:0px;
     right: 0;
-    font-size:12px;
+    font-size:10px;
     background:green;
     color:white;
-    width:68px;height:38px;
+    width:68px;height:34px;
     text-align:center;
     line-height:18px;
     border-radius:50%;
@@ -70,4 +70,23 @@ image{
     align-items: center;
 
 
+}
+
+.card_of_movie:hover {
+    transform: scale(1.2);
+    /*margin-top: -10px;*/
+    /*margin-left: 20px;*/
+    /*transition: margin-left 130ms;*/
+    /*transition: margin-top 130ms;*/
+    box-shadow: 0 10px 90px rgba(0, 0, 0, 0.4);
+    z-index: 10000;
+}
+
+.badge1:hover {
+    transform: scale(1.5);
+    margin-top: -10px;
+    margin-left: 20px;
+    transition: margin-left 130ms;
+    transition: margin-top 130ms;
+    box-shadow: 0 10px 90px rgba(0, 0, 0, 0.4);
 }
