--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -1,7 +1,7 @@
 .card_of_movie{
     padding-top:0;
-    height: 450px;
-    width: 250px;
+    height: 550px;
+    width: 330px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,6 +9,7 @@
     border-radius: 5px;
     background: white;
     text-decoration: none;
+    padding-bottom: 15px;
 
 
 }
@@ -48,9 +49,9 @@ image{
 
 .badge1 {
     position:relative;
-    /*display: flex;*/
-    /*text-align: center;*/
-    /*align-items: center;*/
+    display: flex;
+    align-items: center;
+    text-align: center;
 
 }
 .badge1[data-badge]:after {
@@ -61,7 +62,7 @@ image{
     font-size:10px;
     background:green;
     color:white;
-    width:68px;height:34px;
+    width:68px;height:49px;
     text-align:center;
     line-height:18px;
     border-radius:50%;
@@ -73,12 +74,14 @@ image{
 }
 
 .card_of_movie:hover {
-    transform: scale(1.2);
+    transition: all linear .1s;
+    border: 1px solid #59c7fb;
+    background: coral;
     /*margin-top: -10px;*/
     /*margin-left: 20px;*/
     /*transition: margin-left 130ms;*/
     /*transition: margin-top 130ms;*/
-    box-shadow: 0 10px 90px rgba(0, 0, 0, 0.4);
-    z-index: 10000;
+
+
 }
 
