--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -1,5 +1,6 @@
+
 .card_of_movie{
-    padding-top:0;
+    position: relative;
     height: 550px;
     width: 330px;
     display: flex;
@@ -53,8 +54,9 @@ image{
 .badge1 {
     position:relative;
     display: flex;
-    align-items: center;
-    text-align: center;
+    align-items:center !important;
+    text-align: center !important;
+    justify-content: center !important;
 
 }
 .badge1[data-badge]:after {
@@ -80,11 +82,48 @@ image{
     transition: all linear .1s;
     border: 1px solid #59c7fb;
     background: coral;
-    /*margin-top: -10px;*/
-    /*margin-left: 20px;*/
-    /*transition: margin-left 130ms;*/
-    /*transition: margin-top 130ms;*/
-
 
 }
-
+.ribbon {
+    position: absolute;
+    right: -5px; top: -5px;
+    z-index: 1;
+    overflow: hidden;
+    width: 75px; height: 75px;
+    text-align: right;
+}
+.ribbon span {
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 20px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    width: 130px;
+    display: block;
+    background: #79A70A;
+    background: linear-gradient(#9BC90D 0%, #79A70A 100%);
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 19px; right: -21px;
+}
+.ribbon span::before {
+    content: "";
+    position: absolute; left: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid #79A70A;
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #79A70A;
+}
+.ribbon span::after {
+    content: "";
+    position: absolute; right: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid transparent;
+    border-right: 3px solid #79A70A;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #79A70A;
+}
