--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -127,3 +127,38 @@ image{
     border-bottom: 3px solid transparent;
     border-top: 3px solid #79A70A;
 }
+
+.new{
+    display: flex;
+    gap: 15px;
+
+}
+
+.cars_list{
+    background: coral;
+    width:1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    flex-wrap: wrap;
+    gap: 35px;
+}
+
+.flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+ h1 {
+    font-size: 40px;
+    font-weight: 600;
+    color: #fdfdfe;
+    text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
+    0px 0px 20px #b393d3;
+}
+body{
+    background: black;
+}
