--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -21,9 +21,10 @@ a{
 }
 
 .card_of_movie_info{
+
     padding-top:15px;
-    height: 750px;
     width: 450px;
+    height: 1560px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,32 +52,6 @@ image{
 
 }
 
-.badge1 {
-    position:relative;
-    display: flex;
-    align-items:center !important;
-    text-align: center !important;
-    justify-content: center !important;
-
-}
-.badge1[data-badge]:after {
-    content:attr(data-badge);
-    position:absolute;
-    top-left:0px;
-    right: 0;
-    font-size:10px;
-    background:green;
-    color:white;
-    width:68px;height:49px;
-    text-align:center;
-    line-height:18px;
-    border-radius:50%;
-    box-shadow:0 0 1px #333;
-    justify-content: center;
-    align-items: center;
-
-
-}
 
 .card_of_movie:hover {
     transition: all linear .1s;
@@ -128,9 +103,9 @@ image{
     border-top: 3px solid #79A70A;
 }
 
-.new{
+.box{
     display: flex;
-    gap: 15px;
+    gap: 20px;
 
 }
 
@@ -159,6 +134,11 @@ image{
     text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
     0px 0px 20px #b393d3;
 }
-body{
-    background: black;
-}
+
+ .info{
+
+    margin-top: 30px;
+
+
+
+ }
