--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -8,7 +8,7 @@
     justify-content: center;
     overflow: hidden;
     border-radius: 5px;
-    background:darkslateblue;
+    background:navy;
     padding-bottom: 15px;
     text-decoration: none
 
@@ -21,10 +21,10 @@ a{
 }
 
 .card_of_movie_info{
-
+    padding-bottom: 15px;
     padding-top:15px;
     width: 450px;
-    height: 1560px;
+    height: 1460px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -110,7 +110,7 @@ image{
 }
 
 .cars_list{
-    background: coral;
+    background: darkblue;
     width:1200px;
     display: flex;
     justify-content: center;
