--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -24,6 +24,7 @@ a{
     padding-bottom: 15px;
     padding-top:15px;
     width: 450px;
+    /*width: 100%;*/
     height: 1460px;
     display: flex;
     flex-direction: column;
@@ -106,12 +107,15 @@ image{
 .box{
     display: flex;
     gap: 20px;
+    width: 100%;
+
 
 }
 
 .cars_list{
     background: darkblue;
     width:1200px;
+    /*width: 100%;*/
     display: flex;
     justify-content: center;
     align-items: center;
