--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,6 +15,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 
 }
 
@@ -35,3 +36,115 @@ body.dark-theme a {
     color: #809fff;
 }
 
+.btn {
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 20px;
+    margin: 0 15px 15px 0;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    height: 32px;
+    line-height: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #fff;
+    background-color: #3775dd;
+    box-shadow: 0 2px #21487f;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation;
+    vertical-align: top;
+}
+.btn:hover {
+    background-color: #002fed;
+}
+.btn:active {
+    background-color: #2f599e !important;
+}
+.btn:focus-visible {
+    box-shadow: 0 0 0 3px lightskyblue;
+}
+.btn:disabled {
+    background-color: #6c87b5;
+    pointer-events: none;
+}
+
+.search {
+    width: 100%;
+    position: relative;
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.searchTerm {
+    width: 300px;
+    /*border: 3px solid #00B4CC;*/
+    border-right: none;
+    padding: 5px;
+    height: 20px;
+    border-radius: 5px;
+    outline: none;
+    color: #9DBFAF;
+}
+
+.searchTerm:focus{
+    color: #00B4CC;
+}
+
+.searchButton {
+    width: 100px;
+    height: 36px;
+    border: 1px solid #00B4CC;
+    background: #00B4CC;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.name{
+    margin-left: 500px;
+    width: 200px;
+
+}
+
+
+.btn1{
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 20px;
+    margin: 0 15px 15px 0;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    height: 22px;
+    line-height: 32px;
+    font-size: 12px;
+    /*font-weight: 500;*/
+    text-decoration: none;
+    color: #fff;
+    background-color: #3775dd;
+    box-shadow: 0 2px #21487f;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation;
+    vertical-align: top;
+}
+.btn1:hover {
+    background-color: #002fed;
+}
+.btn1:active {
+    background-color: #2f599e !important;
+}
+.btn1:focus-visible {
+    box-shadow: 0 0 0 3px lightskyblue;
+}
+.btn1:disabled {
+    background-color: #6c87b5;
+    pointer-events: none;
+}
