--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -23,7 +23,7 @@ a{
 .card_of_movie_info{
     padding-bottom: 15px;
     padding-top:15px;
-    width: 450px;
+    width: 600px;
     /*width: 100%;*/
     height: 1460px;
     display: flex;
@@ -36,6 +36,10 @@ a{
     color: #8d8176;
     border: none !important;
 
+}
+
+.card_of_movie_info:empty{
+    display: none;
 }
 
 .pic{
@@ -143,3 +147,11 @@ image{
     margin-top: 30px;
 
  }
+
+.page{
+    width: 10px;
+    height: 10px;
+    background: #0033cc;
+    margin-left: 20px;
+
+}
