--- a/src/components/MoviesList/MoviesList.module.css
+++ b/src/components/MoviesList/MoviesList.module.css
@@ -15,3 +15,15 @@ text{
 }
 
 
+.page{
+    width: 100px;
+    height: 30px;
+    background: #0033cc;
+
+    border-radius: 5px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin: 0 5px 5px 37px;
+
+}
