--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,6 +19,12 @@
 
 }
 
+.image_name{
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+}
+
 body {
     color: #222;
     background:midnightblue;
