--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -78,12 +78,12 @@ a {
     display: inline-block;
     box-sizing: border-box;
     padding: 0 20px;
-    margin: 0 15px 15px 0;
+    margin: 15px 355px 15px 0;
     outline: none;
     border: none;
     border-radius: 4px;
     height: 32px;
-    width: 200px;
+    width: 150px;
     line-height: 32px;
     font-size: 14px;
     font-weight: 500;
