--- a/src/components/MoviesListCard/MoviesListCard.module.css
+++ b/src/components/MoviesListCard/MoviesListCard.module.css
@@ -23,9 +23,9 @@ a{
 .card_of_movie_info{
     padding-bottom: 15px;
     padding-top:15px;
-    width: 600px;
+    width: 550px;
     /*width: 100%;*/
-    height: 1460px;
+    height:fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -184,11 +184,22 @@ image{
     color: white;
     padding: 10px;
     background: #002fed;
-    border-radius: 10px;
+    border-radius: 15px;
+
 
 }
 
-.recommendation:hover{
-    text-decoration: underline;
+
+.rec_list{
+    display: flex;
+    width: 1500px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+
+}
+.author_name{
+    width: 150px;
+    height: 100px;
 
 }
